--- a/apikey/public/index.html
+++ b/apikey/public/index.html
@@ -1,270 +1,11 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>API Key Generator</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
-    }
-
-    body {
-      background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
-      color: #fff;
-    }
-
-    .card {
-      background: rgba(255, 255, 255, 0.12);
-      backdrop-filter: blur(16px);
-      -webkit-backdrop-filter: blur(16px);
-      border: 1px solid rgba(255, 255, 255, 0.18);
-      border-radius: 24px;
-      padding: 36px;
-      width: 100%;
-      max-width: 420px;
-      text-align: center;
-      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.25);
-      position: relative;
-      overflow: hidden;
-    }
-
-    .card::before {
-      content: '';
-      position: absolute;
-      top: -50%;
-      left: -50%;
-      width: 200%;
-      height: 200%;
-      background: radial-gradient(circle, rgba(255,255,255,0.1) 0%, transparent 70%);
-      z-index: -1;
-    }
-
-    h1 {
-      font-size: 1.8rem;
-      font-weight: 700;
-      margin-bottom: 28px;
-      letter-spacing: -0.5px;
-      text-shadow: 0 2px 4px rgba(0,0,0,0.15);
-    }
-
-    .btn-group {
-      display: flex;
-      justify-content: center;
-      gap: 14px;
-      margin-bottom: 24px;
-    }
-
-    .btn {
-      position: relative;
-      overflow: hidden;
-      border: none;
-      border-radius: 14px;
-      padding: 13px 20px;
-      font-size: 0.95rem;
-      font-weight: 600;
-      cursor: pointer;
-      transition: all 0.25s ease;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-      color: white;
-    }
-
-    .btn-primary {
-      background: linear-gradient(135deg, #8a2be2, #7b2cbf);
-      flex: 1.5;
-    }
-
-    .btn-secondary {
-      background: rgba(255, 255, 255, 0.15);
-      flex: 1;
-    }
-
-    .btn:hover:not(:disabled) {
-      transform: translateY(-3px);
-      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.3);
-    }
-
-    .btn:disabled {
-      opacity: 0.6;
-      cursor: not-allowed;
-      transform: none;
-    }
-
-    .btn::after {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 5px;
-      height: 5px;
-      background: rgba(255, 255, 255, 0.5);
-      opacity: 0;
-      border-radius: 100%;
-      transform: scale(1, 1) translate(-50%);
-      transform-origin: 50% 50%;
-    }
-
-    .btn:active::after {
-      animation: ripple 0.6s ease-out;
-    }
-
-    @keyframes ripple {
-      0% {
-        transform: scale(0, 0);
-        opacity: 0.7;
-      }
-      100% {
-        transform: scale(40, 40);
-        opacity: 0;
-      }
-    }
-
-    textarea {
-      width: 100%;
-      min-height: 100px;
-      padding: 16px;
-      border-radius: 16px;
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      background: rgba(255, 255, 255, 0.96);
-      color: #2c2c2c;
-      font-size: 1rem;
-      font-family: 'Poppins', monospace;
-      resize: vertical;
-      transition: all 0.3s ease;
-      opacity: 0;
-      transform: translateY(10px);
-    }
-
-    textarea.show {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    textarea:focus {
-      outline: none;
-      border-color: #9d4edd;
-      box-shadow: 0 0 0 3px rgba(157, 78, 221, 0.3);
-    }
-
-    .footer {
-      margin-top: 26px;
-      font-size: 0.8rem;
-      opacity: 0.8;
-      letter-spacing: 0.4px;
-    }
-
-    .toast {
-      position: fixed;
-      bottom: 30px;
-      right: 30px;
-      background: rgba(123, 44, 191, 0.95);
-      color: white;
-      padding: 14px 22px;
-      border-radius: 14px;
-      font-weight: 600;
-      font-size: 0.95rem;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.25);
-      opacity: 0;
-      transform: translateY(20px);
-      transition: opacity 0.3s ease, transform 0.3s ease;
-      z-index: 1000;
-    }
-
-    .toast.show {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    @media (max-width: 480px) {
-      .card {
-        padding: 28px 20px;
-      }
-      .btn-group {
-        flex-direction: column;
-        align-items: center;
-      }
-      .btn {
-        width: 100%;
-      }
-    }
-  </style>
+  <title>API Key System</title>
 </head>
 <body>
-  <div class="card">
-    <h1>🔑 API Key Generator</h1>
-    <div class="btn-group">
-      <button class="btn btn-primary" onclick="generateAndCopyApiKey()">
-        Buat & Salin API Key
-      </button>
-      <button class="btn btn-secondary" id="copyBtn" onclick="copyApiKey()" disabled>
-        📋 Salin
-      </button>
-    </div>
-    <textarea id="apiKeyField" readonly placeholder="API Key akan muncul di sini..."></textarea>
-    <div class="footer">© 2025 Gerbang East • Aman & Cepat</div>
-  </div>
-
-  <div id="toast" class="toast">API Key berhasil disalin!</div>
-
-  <script>
-    async function generateAndCopyApiKey() {
-      const btn = document.querySelector('.btn-primary');
-      const originalText = btn.innerHTML;
-      btn.disabled = true;
-      btn.innerHTML = 'Membuat...';
-
-      try {
-        const res = await fetch('/api/generate-key', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' }
-        });
-
-        const data = await res.json();
-        if (data.success && data.apiKey) {
-          const field = document.getElementById('apiKeyField');
-          field.value = data.apiKey;
-          field.classList.add('show');
-          document.getElementById('copyBtn').disabled = false;
-
-          // Auto-select & copy
-          field.select();
-          await navigator.clipboard.writeText(data.apiKey);
-          showToast('✅ API Key disalin ke clipboard!');
-        } else {
-          throw new Error('Gagal');
-        }
-      } catch (err) {
-        console.error(err);
-        showToast('❌ Gagal membuat API key.');
-      } finally {
-        btn.disabled = false;
-        btn.innerHTML = originalText;
-      }
-    }
-
-    function copyApiKey() {
-      const val = document.getElementById('apiKeyField').value.trim();
-      if (!val) return;
-      navigator.clipboard.writeText(val).then(() => {
-        showToast('📋 Disalin!');
-      });
-    }
-
-    function showToast(msg) {
-      const t = document.getElementById('toast');
-      t.textContent = msg;
-      t.classList.add('show');
-      setTimeout(() => t.classList.remove('show'), 2300);
-    }
-  </script>
+  <h1>Selamat Datang</h1>
+  <a href="register.html">Register Admin</a> |
+  <a href="login.html">Login Admin</a>
 </body>
 </html>
