--- a/apikey/public/login.html
+++ b/apikey/public/login.html
@@ -8,7 +8,7 @@
     <input type="password" id="password" placeholder="Password" required><br><br>
     <button type="submit">Login</button>
   </form>
-  <a href="index.html">Kembali</a>
+  <a href="register.html">Belum punya akun? Daftar</a>
 
   <script>
     async function login(e) {
