--- a/apikey/public/register.html
+++ b/apikey/public/register.html
@@ -6,9 +6,9 @@
   <form onsubmit="register(event)">
     <input type="email" id="email" placeholder="Email" required><br><br>
     <input type="password" id="password" placeholder="Password" required><br><br>
-    <button type="submit">Register</button>
+    <button type="submit">Daftar</button>
   </form>
-  <a href="index.html">Kembali</a>
+  <a href="login.html">Sudah punya akun? Login</a>
 
   <script>
     async function register(e) {
