--- a/apikey/public/register.html
+++ b/apikey/public/register.html
@@ -1,14 +1,117 @@
 <!DOCTYPE html>
-<html>
-<head><title>Register Admin</title></head>
+<html lang="id">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Register Admin</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    body {
+      background: linear-gradient(135deg, #2c3e50, #4a6491);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      color: #333;
+    }
+
+    .card {
+      background: white;
+      padding: 40px;
+      border-radius: 16px;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.25);
+      width: 100%;
+      max-width: 420px;
+      text-align: center;
+    }
+
+    .card h2 {
+      margin-bottom: 24px;
+      color: #2c3e50;
+      font-size: 1.8em;
+    }
+
+    .input-group {
+      margin-bottom: 20px;
+      text-align: left;
+    }
+
+    .input-group label {
+      display: block;
+      margin-bottom: 6px;
+      font-weight: 600;
+      color: #444;
+    }
+
+    .input-group input {
+      width: 100%;
+      padding: 12px 16px;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      font-size: 16px;
+      transition: border-color 0.3s, box-shadow 0.3s;
+    }
+
+    .input-group input:focus {
+      outline: none;
+      border-color: #3498db;
+      box-shadow: 0 0 0 3px rgba(52, 152, 219, 0.2);
+    }
+
+    .btn {
+      width: 100%;
+      padding: 13px;
+      background: linear-gradient(to right, #3498db, #2980b9);
+      color: white;
+      border: none;
+      border-radius: 10px;
+      font-size: 16px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.3s, transform 0.2s;
+    }
+
+    .btn:hover {
+      background: linear-gradient(to right, #2980b9, #2573a7);
+      transform: translateY(-2px);
+    }
+
+    .link {
+      display: block;
+      margin-top: 20px;
+      color: #3498db;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    .link:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
 <body>
-  <h2>Register Admin</h2>
-  <form onsubmit="register(event)">
-    <input type="email" id="email" placeholder="Email" required><br><br>
-    <input type="password" id="password" placeholder="Password" required><br><br>
-    <button type="submit">Daftar</button>
-  </form>
-  <a href="login.html">Sudah punya akun? Login</a>
+  <div class="card">
+    <h2>📝 Daftar Admin</h2>
+    <form onsubmit="register(event)">
+      <div class="input-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" placeholder="Masukkan email Anda" required />
+      </div>
+      <div class="input-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" placeholder="Buat password yang aman" required />
+      </div>
+      <button type="submit" class="btn">Daftar Sekarang</button>
+    </form>
+    <a href="login.html" class="link">Sudah punya akun? Login di sini</a>
+  </div>
 
   <script>
     async function register(e) {
@@ -16,13 +119,29 @@
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
 
-      const res = await fetch('/register', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ email, password })
-      });
-      const data = await res.json();
-      alert(data.message || data.error);
+      if (password.length < 6) {
+        alert('⚠️ Password minimal 6 karakter.');
+        return;
+      }
+
+      try {
+        const res = await fetch('/register', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ email, password })
+        });
+        const data = await res.json();
+
+        if (data.message) {
+          alert('✅ ' + data.message);
+          window.location.href = 'login.html';
+        } else {
+          alert('❌ ' + (data.error || 'Gagal mendaftar.'));
+        }
+      } catch (err) {
+        console.error(err);
+        alert('⚠️ Terjadi kesalahan. Periksa koneksi Anda.');
+      }
     }
   </script>
 </body>
